-Move all models to Models Project -Create Tests for the HealthCheckerRepository -Add Database Migrations

--- a/HealthChecker.Data.Tests/HealthChecker.Data.Tests.csproj
+++ b/HealthChecker.Data.Tests/HealthChecker.Data.Tests.csproj
@@ -8,17 +8,14 @@
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.1.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.0.1" />
-    <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="2.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.6.0" />
-    <PackageReference Include="Moq" Version="4.8.2" />
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\HealthChecker.Middleware\HealthChecker.Middleware.csproj" />
+    <ProjectReference Include="..\HealthChecker.Data\HealthChecker.Data.csproj" />
     <ProjectReference Include="..\HealthChecker.Models\HealthChecker.Models.csproj" />
   </ItemGroup>
 
