--- a/HealthChecker.Data/HealthChecker.Data.csproj
+++ b/HealthChecker.Data/HealthChecker.Data.csproj
@@ -1,11 +1,27 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netcoreapp2.0;netstandard2.0</TargetFrameworks>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20180304114612_InitialCreate.cs" />
+    <Compile Remove="Migrations\20180304114820_InitialCreate.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\HealthChecker.Middleware\HealthChecker.Middleware.csproj" />
+    <ProjectReference Include="..\HealthChecker.Models\HealthChecker.Models.csproj" />
   </ItemGroup>
 
 </Project>
